--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ requires-python = ">=3.8"
 
 dependencies = []
 
+
 [project.optional-dependencies]
 dev = [
     "black",
     "pytest",
     "mypy",
+    "flake8",
+    "flake8-pyproject",
 ]
+
 
 [build-system]
 requires = [
@@ -18,6 +22,7 @@ requires = [
     "wheel",
 ]
 build-backend = "setuptools.build_meta"
+
 
 [tool.pytest.ini_options]
 minversion = "7.0"
@@ -29,3 +34,10 @@ pythonpath = [
 
 [tool.mypy]
 disallow_untyped_defs = true
+
+
+[tool.flake8]
+max-line-length = 88
+per-file-ignores = [
+    '__init__.py:F401',
+]
