--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,3 @@
-[project]
-name = "pysh"
-version = "0+dev"
-requires-python = ">=3.8"
-
-dependencies = []
-
-
-[project.optional-dependencies]
-dev = [
-    "black",
-    "isort",
-    "pytest",
-    "mypy",
-    "flake8",
-    "flake8-pyproject",
-]
-
-
 [build-system]
 requires = [
     "setuptools>=42",
@@ -35,18 +16,20 @@ profile = "black"
 
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = "-s"
-pythonpath = [
-    "src",
-]
+addopts = ""
+pythonpath = "src"
 
 
 [tool.mypy]
 disallow_untyped_defs = true
 
+[[tool.mypy.overrides]]
+ignore_missing_imports = true
+module = []
+
 
 [tool.flake8]
 max-line-length = 88
 per-file-ignores = [
-    '__init__.py:F401',
+    "__init__.py:F401",
 ]
