Install test extras in tox testenv

--- a/tox.ini
+++ b/tox.ini
@@ -5,31 +5,28 @@ envlist =
     py38
     py39
     py310
+    py311
     black
     isort
     mypy
     flake8
 
-
 [testenv]
 allowlist_externals = *
 commands = pytest
-
+extras = test
 
 [testenv:black]
 commands = black --check --diff .
 extras = dev
 
-
 [testenv:isort]
 commands = isort --check --diff .
 extras = dev
 
-
 [testenv:mypy]
 commands = mypy .
 extras = typing
-
 
 [testenv:flake8]
 commands = flake8 .
