--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,13 @@ jobs:
         run: echo ${{ github.run_number }}
       - name: Output Run Attempt
         run: echo ${{ github.run_attempt }}
+      - name: Calculate version
+        run: |
+          version=$(cat version.txt)
+          patch=$(git rev-list --count $(git log --follow -1 --pretty=%H version.txt)..HEAD)
+          build=${{ github.run_attempt }}
+
+          echo "PACKAGE_VERSION=$version.$patch" >> $GITHUB_ENV
+          echo "BUILD_NUMBER=$build" >> $GITHUB_ENV
       # Build
       # Upload to Pypi through twine
