--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,6 @@ jobs:
         run: pip install twine --upgrade
       - name: Check out repository code
         uses: actions/checkout@v3
-      # Calculate version
-      - name: Output Run ID
-        run: echo ${{ github.run_id }}
-      - name: Output Run Number
-        run: echo ${{ github.run_number }}
-      - name: Output Run Attempt
-        run: echo ${{ github.run_attempt }}
       - name: Calculate version
         run: |
           version=$(cat version.txt)
@@ -29,6 +22,9 @@ jobs:
           build=${{ github.run_attempt }}
 
           echo "PACKAGE_VERSION=$version.$patch" >> $GITHUB_ENV
+          echo "Calculated package version: $PACKAGE_VERSION"
+
           echo "BUILD_NUMBER=$build" >> $GITHUB_ENV
+          echo "Build number: $BUILD_NUMBER"
       # Build
       # Upload to Pypi through twine
