--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy
 on:
   push:
-    # branches:
-    #   - master
+    branches:
+      - master
 jobs:
   Python:
     runs-on: ubuntu-latest
