Lock tool versions and cleanup setup and tox files

--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,32 @@
 [tox]
-isolated_build = True
+minversion = 4.0
 skip_missing_interpreters = True
 envlist =
-    py38
-    py39
-    py310
     py311
+    py310
+    py39
+    py38
     black
     isort
     mypy
     flake8
 
 [testenv]
-allowlist_externals = *
 commands = pytest
 extras = test
 
 [testenv:black]
 commands = black --check --diff .
-extras = dev
+extras = black
 
 [testenv:isort]
 commands = isort --check --diff .
-extras = dev
+extras = isort
 
 [testenv:mypy]
 commands = mypy .
-extras = typing
+extras = mypy
 
 [testenv:flake8]
 commands = flake8 .
-extras = dev
+extras = flake8
